--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- CONTEÚDO DO JOGO -->
     <div class="game-container">
-        <h2>🎉 Show do Milhão - Matemática 🎉</h2>
+        <h2>🎉 Show do Milhão - Matemática e Português 🎉</h2>
         <div id="question-box">
             <p id="question">A pergunta vai aparecer aqui...</p>
             <div id="answers">
